<resources>
    <string name="app_name">Electronic Shop</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="addToCart">Add to Cart</string>
    <string name="addToWishlist">Add to Wishlist</string>
    <string name="mobile">Mobile Number</string>
    <string name="link1">Already have an account? Sign In</string>
    <string name="link2">Don\'t have an account? Sign Up</string>
    <string name="menuItem1">Home</string>
    <string name="menuItem2">Profile</string>
    <string name="menuItem3">Cart</string>
    <string name="menuItem4">Wishlist</string>
    <string name="menuItem5">Purchased Items</string>
    <string name="menuItem6">Orders</string>
    <string name="menuItem7">Products</string>
    <string name="menuItem8">Settings</string>
    <string name="menuItem9">Logout</string>
    <string name="menuItem10">Dashboard</string>
    <string name="menuItem11">Users</string>
    <string name="menuGroup1">Buyers</string>
    <string name="menuGroup2">Sellers</string>
    <string name="menuGroup3">Other</string>
    <string name="message1">Do you want to delete this product?</string>
    <string name="search">Search</string>
    <string name="onDelivery">On Delivery</string>
       <string name="update">Update</string>
    <string name="view">View</string>
    <string name="orderId">Order ID</string>
    <string name="allOrders">All Orders</string>
    <string name="todaysOrders">Today\'s Orders</string>
    <string name="viewAllSelling">View All Sellings</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="searchTxt">Search Products</string>
    <string name="sampleEmail">tharushihettiarachchi12@gmail.com</string>
    <string name="sampleName">Tharushi Hettiarachchi</string>
    <string name="sampleProductName">Infarred Proximity Sensor</string>
    <string name="sampleProductCode">GP2Y0A21YK0F</string>
    <string name="sampleProductPrice">Rs. 1200.00</string>
    <string name="sampleQty">12 Items</string>
    <string name="addProduct">Add Product</string>
    <string name="productName">Product Name</string>
    <string name="productCategory">Product Category</string>
    <string name="productPrice">Product Price</string>
    <string name="productQty">Product Quantity</string>
    <string name="productCode">Product Code</string>
    <string name="addCart">Cart</string>
    <string name="addWatchlist">Watchlist</string>
    <string name="subTotal">Sub Total</string>
    <string name="placeOrder">Place Order</string>
    <string name="qty">Qty</string>
    <string name="users">Users</string>
    <string name="callSeller">Call Seller</string>
    <string name="productId">Product ID</string>
    <string name="status">Status</string>
    <string name="sampleOrderId">Order ID :1237663</string>
    <string name="sampleOrderIds">1237663</string>
    <string name="cancel">Cancel</string>
    <string name="readyForDelivery">Ready for Delivery</string>
    <string name="callCustomer">Call Customer</string>
    <string name="to">To</string>
    <string name="customerName">Customer</string>
    <string name="unitPrice">Unit Price</string>
    <string name="totalPrice">Total Price</string>
    <string name="count">12</string>
    <string name="sellingsToday">Todays Sellings</string>
    <string name="product">Product</string>
    <string name="annualSales">Annual Sales</string>
    <string name="products">Products</string>
    <string name="price">Price</string>
    <string name="confirmOrder">Confirm Order</string>
    <string name="userAdded">Added by Tharushi Hettiarachchi</string>
    <string name="dateAdded">Added on 2022-12-12</string>
    <string name="sampleStatus">Ordered</string>
    <string name="sampleCategory">Sensors</string>
    <string name="orderConfirmation">Order Confirmation</string>
    <string name="saveLocation">Save My Location</string>
    <string name="updateProfile">Update Profile</string>
    <string name="sampleRegisteredDate">Registered On 2025-12-02 10:02:56</string>
    <string name="sampleDate">2025-12-02 10:02:56</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>