<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView69"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/orderId"
        android:textColor="@color/darkOrange"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/sampleOrderIds"
        android:textColor="@color/darkOrange"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView69"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView69" />

    <TextView
        android:id="@+id/textView72"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/productName"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView69"
        app:layout_constraintTop_toBottomOf="@+id/textView69" />

    <TextView
        android:id="@+id/textView73"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/sampleProductName"
        app:layout_constraintBottom_toBottomOf="@+id/textView72"
        app:layout_constraintEnd_toEndOf="@+id/textView70"
        app:layout_constraintStart_toEndOf="@+id/textView76"
        app:layout_constraintTop_toTopOf="@+id/textView72" />

    <TextView
        android:id="@+id/textView74"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/productCode"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView72"
        app:layout_constraintTop_toBottomOf="@+id/textView72" />

    <TextView
        android:id="@+id/textView75"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sampleProductCode"
        app:layout_constraintBottom_toBottomOf="@+id/textView74"
        app:layout_constraintEnd_toEndOf="@+id/textView73"
        app:layout_constraintStart_toStartOf="@+id/textView73"
        app:layout_constraintTop_toTopOf="@+id/textView74" />

    <TextView
        android:id="@+id/textView76"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/productQty"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView74"
        app:layout_constraintTop_toBottomOf="@+id/textView74" />

    <TextView
        android:id="@+id/textView77"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/unitPrice"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView76"
        app:layout_constraintTop_toBottomOf="@+id/textView76" />

    <TextView
        android:id="@+id/textView78"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/totalPrice"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView77"
        app:layout_constraintTop_toBottomOf="@+id/textView77" />

    <TextView
        android:id="@+id/textView79"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sampleQty"
        app:layout_constraintBottom_toBottomOf="@+id/textView76"
        app:layout_constraintEnd_toEndOf="@+id/textView75"
        app:layout_constraintStart_toStartOf="@+id/textView75"
        app:layout_constraintTop_toTopOf="@+id/textView76" />

    <TextView
        android:id="@+id/textView80"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sampleProductPrice"
        app:layout_constraintBottom_toBottomOf="@+id/textView77"
        app:layout_constraintEnd_toEndOf="@+id/textView79"
        app:layout_constraintStart_toStartOf="@+id/textView79"
        app:layout_constraintTop_toTopOf="@+id/textView77" />

    <TextView
        android:id="@+id/textView81"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sampleProductPrice"
        app:layout_constraintBottom_toBottomOf="@+id/textView78"
        app:layout_constraintEnd_toEndOf="@+id/textView80"
        app:layout_constraintStart_toStartOf="@+id/textView80"
        app:layout_constraintTop_toTopOf="@+id/textView78" />

    <TextView
        android:id="@+id/textView82"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/customerName"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView78"
        app:layout_constraintTop_toBottomOf="@+id/textView78" />

    <TextView
        android:id="@+id/textView83"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sampleName"
        app:layout_constraintBottom_toBottomOf="@+id/textView82"
        app:layout_constraintEnd_toEndOf="@+id/textView81"
        app:layout_constraintStart_toStartOf="@+id/textView81"
        app:layout_constraintTop_toTopOf="@+id/textView82" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/darkOrange"
        android:text="@string/readyForDelivery"
        app:layout_constraintEnd_toEndOf="@+id/textView83"
        app:layout_constraintStart_toStartOf="@+id/textView82"
        app:layout_constraintTop_toBottomOf="@+id/textView82" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/darkOrange"
        android:text="@string/callCustomer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />
</androidx.constraintlayout.widget.ConstraintLayout>